--- a/app/src/main/res/layout/password_vergessen.xml
+++ b/app/src/main/res/layout/password_vergessen.xml
@@ -24,14 +24,14 @@
         android:hint="@string/benutzername"/>
 
     <EditText
-        android:id="@+id/PASSWORD3"
+        android:id="@+id/VERGESSEN_PASSWORD1"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:inputType="textPassword"
         android:hint="@string/passwort2" />
 
     <EditText
-        android:id="@+id/PASSWORD2"
+        android:id="@+id/VERGESSEN_PASSWORD2"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:inputType="textPassword"
@@ -55,7 +55,8 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1.0"
-            android:text="@string/buttonbestaetigen" />
+            android:text="@string/buttonbestaetigen"
+            android:onClick="PassAendern"/>
 
     </LinearLayout>
 
