--- a/app/src/main/res/layout/activity_material_view.xml
+++ b/app/src/main/res/layout/activity_material_view.xml
@@ -23,7 +23,7 @@
     <include layout="@layout/content_material_view" />
 
     <android.support.design.widget.FloatingActionButton
-        android:id="@+id/fab"
+        android:id="@+id/fab2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="bottom|end"
