--- a/app/src/main/res/layout/simple_list_item_1.xml
+++ b/app/src/main/res/layout/simple_list_item_1.xml
@@ -25,7 +25,7 @@
             android:gravity="center"/>
 
         <TextView
-            android:id="@+id/MEIN_MATERAÌAL_ANZAHL"
+            android:id="@+id/MEIN_MATERIAL_ANZAHL"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:text="text2"
