--- a/app/src/main/res/layout/content_material_view.xml
+++ b/app/src/main/res/layout/content_material_view.xml
@@ -17,7 +17,7 @@
         <ImageView
             android:layout_width="75dp"
             android:layout_height="75dp"
-            android:background="@mipmap/ic_launcher"/>
+            android:background="@drawable/baustellenschild"/>
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
