--- a/app/src/main/res/layout/simple_list_image_item_2.xml
+++ b/app/src/main/res/layout/simple_list_image_item_2.xml
@@ -10,7 +10,7 @@
         android:id="@+id/MEIN_BAUSTELLEN_BILD"
         android:layout_width="75dp"
         android:layout_height="75dp"
-        android:background="@mipmap/ic_launcher"/>
+        android:background="@drawable/baustellenschild"/>
 
     <LinearLayout
         android:paddingLeft="10dp"
