--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -51,7 +51,8 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1.0"
-            android:text="@string/buttonAbbrechen"/>
+            android:text="@string/buttonAbbrechen"
+            android:onClick="login"/>
 
         <Button
             android:id="@+id/buttonLogin"
