--- a/app/src/main/res/layout/password_vergessen.xml
+++ b/app/src/main/res/layout/password_vergessen.xml
@@ -44,11 +44,12 @@
         android:paddingTop="10dp">
 
         <Button
-            android:id="@+id/buttonAbbrechen"
+            android:id="@+id/BUTTONABBRECHEN_PASSWORD"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1.0"
-            android:text="@string/buttonAbbrechen"/>
+            android:text="@string/buttonAbbrechen"
+            android:onClick="PassAendern"/>
 
         <Button
             android:id="@+id/BUTTONPASSWORD"
